# ntp-devboard

./: README.md  bom.csv  bom.xls  lcsc.csv  ntp-devboard.kicad_pcb  ntp-devboard.kicad_prl  ntp-devboard.kicad_pro  ntp-devboard.kicad_sch  ntp-devboard.step
firmware/: .gitignore  Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: main.rs
prod/: ntp-devboard-B_Cu.gbr  ntp-devboard-B_Mask.gbr  ntp-devboard-B_Paste.gbr  ntp-devboard-B_Silkscreen.gbr  ntp-devboard-Edge_Cuts.gbr  ntp-devboard-F_Cu.gbr  ntp-devboard-F_Mask.gbr  ntp-devboard-F_Paste.gbr  ntp-devboard-F_Silkscreen.gbr  ntp-devboard-NPTH.drl  ntp-devboard-PTH.drl  ntp-devboard-job.gbrjob
prod/assemb/: ntp-devboard-bottom-pos.csv  ntp-devboard-top-pos.csv
production/: netlist.ipc  rev2_bom.csv  rev2_positions.csv  rev3_positions.csv  rev4_designators.csv
